--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ description = "A tool for managing sailing marks and courses."
 authors = [{name = "Mark McLoughlin"}]
 dependencies = [
     "typer>=0.9.0",
+    "pandas>=0.3.2",
+    "reportlab>=4.4.3",
 ]
 
 [project.scripts]
