--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,6 @@ dependencies = [
 
 [project.scripts]
 markmate = "markmate.cli:main"
+
+[tool.setuptools]
+packages = ["markmate", "markmate.cli"]
